Fix spacing of chat box. Add dummy map pic and description

--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
@@ -5,7 +5,7 @@
 
 .top-div {
   background-color: blue;
-  height: 75%;
+  height: 65%;
 }
 
 ::ng-deep .team1 .mat-grid-tile-content {
@@ -32,7 +32,7 @@
 
 .bottom-div {
   background-color: red;
-  height: 20%;
+  height: 30%;
 }
 
 .lobby-panel {
@@ -61,8 +61,16 @@
   width: 100%;
 }
 
-.map {
+::ng-deep .map .mat-grid-tile-content {
   background-color: pink;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   height: 100%;
+}
+
+.map img {
   width: 100%;
+  height: auto;
+  object-fit: cover;
 }
